# bastion

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml
bastion-core/: Cargo.toml
bastion-core/src/: error.rs  lib.rs  types.rs
bastion-ingest/: Cargo.toml
bastion-ingest/src/: main.rs
bastion-interface/: .dockerignore  Dockerfile  Dockerfile.dev  nuxt.config.ts  package.json  pnpm-lock.yaml
bastion-interface/app/: app.config.ts  app.vue
bastion-interface/app/assets/css/: main.css  theme.css
bastion-interface/app/components/: AppButton.vue  AppCard.vue  AppChatPanel.vue  AppCode.vue  AppContainer.vue  AppDecisionCard.vue  AppPaperViewer.vue  AppReferencePanel.vue  AppSkeleton.vue  AppSuggestionList.vue  AppWikiGraph.vue  AppWikiTree.vue
bastion-interface/app/components/layout/: AppHeader.vue
bastion-interface/app/composables/: useChat.ts  useIngest.ts  useWiki.ts
bastion-interface/app/layouts/: default.vue
bastion-interface/app/pages/: chat.vue  editor.vue  index.vue  ingest.vue  settings.vue  write.vue
bastion-interface/app/pages/files/: index.vue
bastion-interface/app/types/: bastion.ts
bastion-interface/server/api/: health.get.ts  settings.post.ts
bastion-interface/server/api/chat/: query.post.ts
bastion-interface/server/api/embeddings/: backfill.post.ts
bastion-interface/server/api/ingest/: upload.post.ts
bastion-interface/server/api/ingest/status/: [jobId].get.ts
bastion-interface/server/api/latex/: compile.post.ts  draft.get.ts  draft.put.ts
bastion-interface/server/api/lint/: run.post.ts
bastion-interface/server/api/review/: analyze.post.ts
bastion-interface/server/utils/: backend.ts  latexDraft.ts
bastion-llm/: Cargo.toml
bastion-llm/src/: anthropic.rs  embedder.rs  error.rs  factory.rs  lib.rs  openai.rs  provider.rs  voyage.rs
bastion-review/: Cargo.toml
bastion-review/src/: error.rs  lib.rs  lint.rs  review.rs
bastion-store/: Cargo.toml
bastion-store/src/: error.rs  lib.rs  migrations.rs  store.rs
bastion-store/src/migrations/: V01__init.sql
bastion-web/: Cargo.toml
bastion-web/src/: auth.rs  config.rs  error.rs  main.rs  state.rs
bastion-web/src/handlers/: config.rs  ingest.rs  mod.rs  review.rs  wiki.rs
bastion-wiki/: Cargo.toml
bastion-wiki/src/: atomic.rs  error.rs  git.rs  lib.rs  markdown.rs  types.rs  wiki.rs
docs/: general.md  interface.md  knowledge-layer.md  wiki.md
