[package]
name        = "bastion-store"
version.workspace     = true
edition.workspace     = true
description = "SQLite WAL store with FTS5 and embeddings for Bastion."

[dependencies]
bastion-core.workspace  = true
serde.workspace         = true
serde_json.workspace    = true
serde_yaml.workspace    = true
chrono.workspace        = true
thiserror.workspace     = true
rusqlite.workspace      = true
refinery.workspace      = true
walkdir.workspace       = true
tracing.workspace       = true
sha2.workspace          = true
hex.workspace           = true

[dev-dependencies]
tempfile.workspace = true
